# agent-ultra-kit

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  SECURITY.md  config.example.yaml  install.cmd  install.ps1  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  install_problem.yml  security_concern.yml
.github/workflows/: ci.yml  release.yml
docs/: adapter-guide.md  architecture.md  bob-the-builder.md  command-broker.md  panel.md  proof-gates.md  receipts-bus.md  releasing.md  security.md  troubleshooting.md  ultra-loop.md  ultracode.md  verifier.md
examples/basic_panel/: run.py
examples/command_broker_demo/: run.py
examples/hermes_adapter_example/: run.py
examples/ktisis_adapter_example/: run.py
examples/ultra_loop_demo/: run.py
src/agent_ultra/: __init__.py  leakgate.py
src/agent_ultra/adapters/: __init__.py  cli.py  docker_sandbox.py  doctor.py  external_memory.py  hermes.py  ktisis.py  litellm_routes.py  mneme_memory.py
src/agent_ultra/artifacts/: __init__.py  records.py
src/agent_ultra/bob/: __init__.py  pipeline.py  receipts.py  runner.py  sample.py  surgical.py
src/agent_ultra/broker/: __init__.py  broker.py
src/agent_ultra/evidence/: __init__.py  reader.py
src/agent_ultra/memory/: __init__.py  hooks.py
src/agent_ultra/panel/: __init__.py  engine.py  json_extract.py
src/agent_ultra/panel_receipt/: __init__.py  receipt.py
src/agent_ultra/proof/: __init__.py  gates.py
tests/: private_strings.txt  test_artifacts_and_memory.py  test_bob.py  test_bob_surgical.py  test_broker.py  test_evidence.py  test_install_layer.py  test_leakgate.py  test_panel.py  test_panel_receipt.py  test_proof_gates.py  test_receipts_bus.py  test_routes.py  test_ultra_loop.py  test_ultracode.py  test_verifier.py  test_workers.py
(+28 files in other folders)
