[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ultra-kit"
version = "0.1.0"
description = "Agent-agnostic adversarial panel, ULTRA build loop, command broker, and proof gates for AI agent systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "agent-ultra-kit contributors" }]
keywords = ["agents", "llm", "adversarial-review", "command-broker", "proof-gates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# bob's RED/GREEN steps execute pytest at runtime; the core kit stays
# dependency-free, so install this extra (or pytest itself) to use bob:
#   pip install agent-ultra-kit[bob]
bob = ["pytest>=7"]
# Optional heavy worker: LangChain Deep Agents as a multi-file builder/fixer.
# The core install stays zero-dependency; install this extra only if you want
# the Deep Agents worker:  pip install agent-ultra-kit[deepagents]
deepagents = [
    "deepagents",
    "langchain",
    "langchain-openai",
    "langgraph",
]

[project.urls]
Homepage = "https://github.com/trollbot2012/agent-ultra-kit"

[project.scripts]
agent-ultra = "agent_ultra.adapters.cli:main"
agent-ultra-leakgate = "agent_ultra.leakgate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
